tests/templates/testcases/cilium_network_policy/l3_cidr.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cilium-policy-l3-cidr

---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: l3-rule-cidr
  namespace: cilium-policy-l3-cidr
spec:
  endpointSelector:
    matchLabels:
      role: l3-rule-cidr-source
  egress:
  - toCIDR:
    - 100.96.0.2/32

---
apiVersion: v1
kind: Pod
metadata:
  name: l3-rule-cidr-source
  namespace: cilium-policy-l3-cidr
  labels:
    case: l3-rule-cidr
    role: l3-rule-cidr-source
spec:
  affinity:
    podAntiAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: "case"
            operator: In
            values:
            - l3-rule-cidr
        topologyKey: kubernetes.io/hostname
  restartPolicy: Never
  containers:
  - name: fail
    # image: docker.io/library/busybox:1.28.4
    image: cr-inner-cn-guilin-boe.ivolces.com/vke/cello-tools:busybox-1.28.4
    command: ["sh", "-c", "wget -T 1 100.96.0.96/volcstack"]
  - name: success
    # image: docker.io/library/busybox:1.28.4
    image: cr-inner-cn-guilin-boe.ivolces.com/vke/cello-tools:busybox-1.28.4
    command: ["sh", "-c", "ping -c 2 100.96.0.2"]
