tests/templates/testcases/cilium_network_policy/l3_identify.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cilium-policy-l3-identify

---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: l3-rule-identify
  namespace: cilium-policy-l3-identify
spec:
  endpointSelector:
    matchLabels:
      role: l3-rule-identify-source
  egress:
    - toEntities:
      - cluster

---
apiVersion: v1
kind: Pod
metadata:
  name: l3-rule-identify-source
  namespace: cilium-policy-l3-identify
  labels:
    case: l3-rule-identify
    role: l3-rule-identify-source
spec:
  affinity:
    podAntiAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: "case"
            operator: In
            values:
            - l3-rule-identify
        topologyKey: kubernetes.io/hostname
  restartPolicy: Never
  containers:
  - name: fail
    # image: docker.io/library/busybox:1.28.4
    image: cr-inner-cn-guilin-boe.ivolces.com/vke/cello-tools:busybox-1.28.4
    command: ["sh", "-c", "wget -T 1 100.96.0.96/volcstack"]
  - name: success
    # image: docker.io/library/busybox:1.28.4
    image: cr-inner-cn-guilin-boe.ivolces.com/vke/cello-tools:busybox-1.28.4
    command: ["sh", "-c", "wget -T 1 $MY_NODE_IP:11414/healthz"]
    env:
      - name: MY_NODE_IP
        valueFrom:
          fieldRef:
            fieldPath: status.hostIP
