tests/templates/testcases/cilium_network_policy/l3_label.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cilium-policy-l3-label
---
# allow l3-rule-label-client
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l3-rule-label-allow"
  namespace: cilium-policy-l3-label
spec:
  endpointSelector:
    matchLabels:
      role: l3-rule-label-server
  ingress:
  - fromEndpoints:
    - matchLabels:
        role: l3-rule-label-client1

---
# server pod with policy
apiVersion: v1
kind: Pod
metadata:
  name: l3-rule-label-server
  namespace: cilium-policy-l3-label
  labels:
    case: l3-rule-label
    role: l3-rule-label-server
spec:
  containers:
  - name: nginx
    # image: docker.io/library/nginx:latest
    image: cr-cn-guilin-boe.ivolces.com/vke/cello-tools:nginx

---
# allow
apiVersion: v1
kind: Pod
metadata:
  name: l3-rule-label-client1
  namespace: cilium-policy-l3-label
  labels:
    case: l3-rule-label
    role: l3-rule-label-client1
spec:
  affinity:
    podAntiAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: "case"
            operator: In
            values:
            - l3-rule-label
        topologyKey: kubernetes.io/hostname
  restartPolicy: Never
  containers:
  - name: allow
    # image: docker.io/library/busybox:1.28.4
    image: cr-inner-cn-guilin-boe.ivolces.com/vke/cello-tools:busybox-1.28.4
    command: ["sh", "-c", "sleep 360000"]
---
# deny
apiVersion: v1
kind: Pod
metadata:
  name: l3-rule-label-client2
  namespace: cilium-policy-l3-label
  labels:
    case: l3-rule-label
    role: l3-rule-label-client2
spec:
  affinity:
    podAntiAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: "case"
            operator: In
            values:
            - l3-rule-label
        topologyKey: kubernetes.io/hostname
  restartPolicy: Never
  containers:
  - name: allow
    # image: docker.io/library/busybox:1.28.4
    image: cr-inner-cn-guilin-boe.ivolces.com/vke/cello-tools:busybox-1.28.4
    command: ["sh", "-c", "sleep 360000"]

---
# deny all
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l3-rule-label-deny"
  namespace: cilium-policy-l3-label
spec:
  endpointSelector:
    matchLabels:
      role: l3-rule-label-src
  egress:
  - {}

---
apiVersion: v1
kind: Pod
metadata:
  name: l3-rule-label-src
  namespace: cilium-policy-l3-label
  labels:
    case: l3-rule-label
    role: l3-rule-label-src
spec:
  affinity:
    podAntiAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: "case"
            operator: In
            values:
            - l3-rule-label
        topologyKey: kubernetes.io/hostname
  restartPolicy: Never
  containers:
  - name: src
    # image: docker.io/library/busybox:1.28.4
    image: cr-inner-cn-guilin-boe.ivolces.com/vke/cello-tools:busybox-1.28.4
    command: ["sh", "-c", "sleep 360000"]
---
apiVersion: v1
kind: Pod
metadata:
  name: l3-rule-label-dst
  namespace: cilium-policy-l3-label
  labels:
    case: l3-rule-label
    role: l3-rule-label-dst
spec:
  affinity:
    podAntiAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: "case"
            operator: In
            values:
            - l3-rule-label
        topologyKey: kubernetes.io/hostname
  restartPolicy: Never
  containers:
  - name: dst
    # image: docker.io/library/busybox:1.28.4
    image: cr-inner-cn-guilin-boe.ivolces.com/vke/cello-tools:busybox-1.28.4
    command: ["sh", "-c", "sleep 360000"]
