tests/templates/testcases/cilium_network_policy/l3_label_additional_require.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cilium-policy-l3-label-add-req
---

apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: l3-label-add-req
  namespace: cilium-policy-l3-label-add-req
specs:
  - description: "For endpoints with env=prod, only allow if source also has label env=prod"
    endpointSelector:
      matchLabels:
        env: prod
    ingress:
    - fromRequires:
      - matchLabels:
          env: prod

---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: l3-label-add-rule
  namespace: cilium-policy-l3-label-add-req
specs:
  - description: "For endpoints with env=prod, allow if source also has label role=frontend"
    endpointSelector:
      matchLabels:
        env: prod
    ingress:
    - fromEndpoints:
      - matchLabels:
          role: frontend
---

apiVersion: v1
kind: Pod
metadata:
  name: l3-label-add-req-prod-front
  namespace: cilium-policy-l3-label-add-req
  labels:
    case: l3-label-add-req
    env: prod
    role: frontend
spec:
  containers:
  - name: busybox
    # image: docker.io/library/busybox:1.28.4
    image: cr-inner-cn-guilin-boe.ivolces.com/vke/cello-tools:busybox-1.28.4
    command: ["sh", "-c", "sleep 360000"]
---
apiVersion: v1
kind: Pod
metadata:
  name: l3-label-add-req-prod-backend
  namespace: cilium-policy-l3-label-add-req
  labels:
    case: l3-label-add-req
    env: prod
    role: backend
spec:
  containers:
  - name: busybox
    # image: docker.io/library/busybox:1.28.4
    image: cr-inner-cn-guilin-boe.ivolces.com/vke/cello-tools:busybox-1.28.4
    command: ["sh", "-c", "sleep 360000"]

---
apiVersion: v1
kind: Pod
metadata:
  name: l3-label-add-req-test
  namespace: cilium-policy-l3-label-add-req
  labels:
    case: l3-label-add-req
    env: test
spec:
  containers:
  - name: busybox
    # image: docker.io/library/busybox:1.28.4
    image: cr-inner-cn-guilin-boe.ivolces.com/vke/cello-tools:busybox-1.28.4
    command: ["sh", "-c", "sleep 360000"]
