tests/templates/testcases/cilium_network_policy/l3_service_stage2.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: l3-policy-service1
  namespace: cilium-policy-l3-service
  labels:
    case: l3-rule-service
subsets:
  - addresses:
      - ip: BACKEND_IP_0
    ports:
      - port: 11414
        protocol: TCP

---

apiVersion: v1
kind: Endpoints
metadata:
  name: l3-policy-service2
  namespace: cilium-policy-l3-service
  labels:
      case: l3-rule-service
subsets:
  - addresses:
      - ip: BACKEND_IP_1
    ports:
      - port: 11414
        protocol: TCP
