tests/templates/testcases/cilium_network_policy/l4_cidr_dependent_stage2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cilium-policy-l4-cidr-dep

---
apiVersion: v1
kind: Pod
metadata:
  name: l4-cidr-dep-source2
  namespace: cilium-policy-l4-cidr-dep
  labels:
    case: l4-cidr-dep
    role: l4-cidr-dep-source2
spec:
  restartPolicy: Never
  containers:
  - name: success
    # image: docker.io/library/busybox:1.28.4
    image: cr-inner-cn-guilin-boe.ivolces.com/vke/cello-tools:busybox-1.28.4
    command: ["sh", "-c", "wget -T 1 100.96.0.96/volcstack"]

---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: l4-rule-cidr-dep2
  namespace: cilium-policy-l4-cidr-dep
spec:
  endpointSelector:
    matchLabels:
      role: l4-cidr-dep-source2
  egress:
  - toCIDR:
    - 100.96.0.0/16
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
