tests/templates/testcases/cilium_network_policy/l4_port.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cilium-policy-l4-port

---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: l4-rule-port
  namespace: cilium-policy-l4-port
spec:
  endpointSelector:
    matchLabels:
      role: l4-rule-port-source
  egress:
    - toPorts:
      - ports:
        - port: "11414"
          protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: l4-rule-port-source
  namespace: cilium-policy-l4-port
  labels:
    case: l4-rule-port
    role: l4-rule-port-source
spec:
  restartPolicy: Never
  containers:
  - name: fail
    # image: docker.io/library/busybox:1.28.4
    image: cr-inner-cn-guilin-boe.ivolces.com/vke/cello-tools:busybox-1.28.4
    command: ["sh", "-c", "wget -T 1 100.96.0.96/volcstack"]
  - name: success
    # image: docker.io/library/busybox:1.28.4
    image: cr-inner-cn-guilin-boe.ivolces.com/vke/cello-tools:busybox-1.28.4
    command: ["sh", "-c", "wget -T 1 $MY_NODE_IP:11414/healthz"]
    env:
    - name: MY_NODE_IP
      valueFrom:
        fieldRef:
          fieldPath: status.hostIP
